--- a/public/style-add.css
+++ b/public/style-add.css
@@ -15,6 +15,7 @@ form{
 
 section{
     margin-bottom: 15px;
+    z-index: 1;
 }
 
 .form-group {
@@ -48,16 +49,17 @@ section{
     font-size: 18px;
     padding: 12px 18px;
     border-radius: 100px;
-    background-color: whitesmoke;
-    border: 4px solid rgb(238, 112, 133);
+    color: white;
+    background-color: rgb(238, 112, 133);
+    border: 1px solid rgb(245, 209, 215);
     transition: 0.4s ease-in-out;
     margin-left: 50px;
 }
 
 #submit:hover{
-    background-color: rgb(238, 112, 133);
-    border: 4px solid black;
-    color: whitesmoke;
+    background-color: white;
+    border: 1px solid rgb(238, 112, 133);
+    color: black;
 }
 
 /*Mobile*/
@@ -69,67 +71,66 @@ section{
     }
 
     .form-group label{
-        left: 65px;
+        left: 36%;
     }
 
     .form-group input{
         padding: 10px 25px;
+        margin-left: 12%;
+        border-color: rgb(238, 112, 133); 
     }
 
     .form-group select{
-        margin-left: 40px;
+        margin-left: 27%;
+        
     }
 
     #title-brand{
         padding-left: 20px;
     }
 
-    #title-model{
-        left: 45px;
+    #title-model, #title-serial{
+        left: 30%;
+    }
+
+    #submit{
+        margin-left: 32%;
+        margin-top: -20px;
+        margin-bottom: 5px;
     }
     
-    #title-serial{
-        left: 50px;
-    }
-
-
-
 }
 
 /*Tablet*/
 @media screen and (min-width: 481px) and (max-width: 768px){
     form{
         width: 75vw;
-        margin-left: 8%;
+        margin-left: 10%;
         padding: 40px 20px 5px 20px;
     }
     .form-group label{
-        left: 40%;
+        left: 42%;
     }
 
     .form-group input{
         padding: 10px 3%;
-        margin-left: 28%;
+        margin-left: 31.5%;
     }
 
     .form-group select{
-        margin-left: 35%;
+        margin-left: 38%;
     }
 
     #title-brand{
         padding-left: 20px;
     }
 
-    #title-model{
-        left: 36%;
+    #title-model, #title-serial{
+        left: 40%;
     }
     
-    #title-serial{
-        left: 36%;
-    }
-
     #submit{
-        margin-left: 38%;
+        margin-left: 40%;
         margin-top: -20px;
         margin-bottom: 5px;
     }
@@ -181,7 +182,7 @@ section{
     }
 
     .form-group label{
-        left: 40%;
+        left: 38%;
     }
 
     .form-group input{
@@ -190,23 +191,19 @@ section{
     }
 
     .form-group select{
-        margin-left: 33%;
+        margin-left: 30%;
     }
 
     #title-brand{
         padding-left: 15px;
     }
 
-    #title-model{
-        left: 35%;
-    }
-
-    #title-serial{
-        left: 35%;
+    #title-model, #title-serial{
+        left: 33%;
     }
 
     #submit{
-        margin-left: 36%;
+        margin-left: 33%;
         margin-top: -20px;
         margin-bottom: 5px;
     }
