--- a/public/style-IMS.css
+++ b/public/style-IMS.css
@@ -43,6 +43,22 @@ footer{
     padding: 23px;
 }
 
+#search-bar{
+    width: 70%;
+    height: 40px;
+    border-radius: 5px;
+}
+
+#filter-button{
+    padding: 14px 10px;
+    background-color: blue;
+    color: white;
+    border: 2px solid blue;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
+}
+
 .logo{
     width: 18%;
     margin-top: 8px;
@@ -106,7 +122,7 @@ li a:hover {
 }
 
 .search-filter{
-    margin-left: 40%;
+    margin-left: 20%;
     margin-bottom: 20px;
 }
 
