--- a/public/style-add.css
+++ b/public/style-add.css
@@ -4,6 +4,10 @@ h1{
     padding-bottom: 15px;
 }
 
+.success-message{
+    display: none;
+}
+
 form{
     border-style: outset;
     border-width: 5px;
@@ -45,7 +49,7 @@ section{
     border-radius: 3px;
 }
 
-#submit{
+#submit, .delete-button{
     font-size: 18px;
     padding: 12px 18px;
     border-radius: 100px;
