--- a/public/style-add.css
+++ b/public/style-add.css
@@ -1,20 +1,50 @@
+:root{
+    --box-shadow: darkslategray;
+    --text: black;
+    --accent: rgb(245, 209, 215);
+    --primary: white;
+    --secondary: rgb(238, 112, 133);
+    --background: whitesmoke;
+}
+
 h1{
     text-align: center;
     margin-top: -20px;
     padding-bottom: 15px;
 }
 
+.success-message{
+    position: absolute;
+    top: 75vh;
+    right: -50px;
+    display: none;
+    padding: 30px 35px;
+    background-color: var(--background);
+    border: 3px solid var(--accent); 
+    color: var(--text);
+    box-shadow: 0px 0px 4px var(--box-shadow);
+}
+main{
+    display: grid !important;
+    grid-template-rows: auto 1fr; /* Adjust the row layout for mobile */
+    row-gap: 0px;
+}
+
 form{
-    border-style: outset;
+    background-color: var(--primary);
+    box-shadow: 0px 0px 4px var(--box-shadow);
     border-width: 5px;
     border-radius: 5px;
     width: 45vw;
-    margin-left: 25%;
     padding: 40px 20px 40px 20px;
 }
 
+form::-webkit-scrollbar{
+    display: none;
+}
+
 section{
-    margin-bottom: 15px;
+    margin-bottom: 30px;
 }
 
 .form-group {
@@ -44,92 +74,90 @@ section{
     border-radius: 3px;
 }
 
-#submit{
+#submit, .delete-button{
     font-size: 18px;
     padding: 12px 18px;
     border-radius: 100px;
-    background-color: whitesmoke;
-    border: 4px solid rgb(238, 112, 133);
+    color: white;
+    background-color: rgb(238, 112, 133);
+    border: 1px solid rgb(245, 209, 215);
     transition: 0.4s ease-in-out;
     margin-left: 50px;
 }
 
 #submit:hover{
-    background-color: rgb(238, 112, 133);
-    border: 4px solid black;
-    color: whitesmoke;
+    background-color: white;
+    border: 1px solid rgb(238, 112, 133);
+    color: black;
 }
 
 /*Mobile*/
 @media screen and (max-width : 480px){
     form{
         width: 75vw;
-        margin-left: 5%;
-        padding: 40px 20px 5px 20px;
+        padding: 40px 20px 10px 20px;
     }
 
     .form-group label{
-        left: 65px;
+        left: 36%;
     }
 
     .form-group input{
         padding: 10px 25px;
+        margin-left: 12%;
+        border-color: rgb(238, 112, 133); 
     }
 
     .form-group select{
-        margin-left: 40px;
+        margin-left: 27%;
+        
     }
 
     #title-brand{
         padding-left: 20px;
     }
 
-    #title-model{
-        left: 45px;
+    #title-model, #title-serial{
+        left: 30%;
+    }
+
+    #submit{
+        margin-left: 32%;
+        margin-top: -20px;
+        margin-bottom: 5px;
     }
     
-    #title-serial{
-        left: 50px;
-    }
-
-
-
 }
 
 /*Tablet*/
 @media screen and (min-width: 481px) and (max-width: 768px){
     form{
         width: 75vw;
-        margin-left: 8%;
         padding: 40px 20px 5px 20px;
     }
     .form-group label{
-        left: 40%;
+        left: 42%;
     }
 
     .form-group input{
         padding: 10px 3%;
-        margin-left: 28%;
+        margin-left: 31.5%;
     }
 
     .form-group select{
-        margin-left: 35%;
+        margin-left: 38%;
     }
 
     #title-brand{
         padding-left: 20px;
     }
 
-    #title-model{
-        left: 36%;
+    #title-model, #title-serial{
+        left: 40%;
     }
     
-    #title-serial{
-        left: 36%;
-    }
-
     #submit{
-        margin-left: 38%;
+        margin-left: 40%;
         margin-top: -20px;
         margin-bottom: 5px;
     }
@@ -137,8 +165,12 @@ section{
 
 /*Laptop*/
 @media screen and (min-width: 769px) and (max-width: 1023px){
+    main{
+        margin: 20% 32px 0px 32px;
+        height: 80vh;
+    }
     form{
-        height: 60vh;
+        height: 45vh;
     }
     .form-group label{
         left: 40%;
@@ -170,18 +202,22 @@ section{
         margin-top: -20px;
         margin-bottom: 5px;
     }
+
+    footer{
+        min-height: 8vh;
+        padding: 20px 10px 0px 10px;
+    }
 }
 
 /*Desktop*/
-@media screen and (min-width: 1024px) and (max-width: 1300px){
+@media screen and (min-width: 1024px) {
     form{
-        height: 60vh;
+        height: 70vh;
         width: 30vw;
-        margin-left: 30%;
     }
 
     .form-group label{
-        left: 40%;
+        left: 38%;
     }
 
     .form-group input{
@@ -190,24 +226,22 @@ section{
     }
 
     .form-group select{
-        margin-left: 33%;
+        margin-left: 30%;
     }
 
     #title-brand{
         padding-left: 15px;
     }
 
-    #title-model{
-        left: 35%;
-    }
-
-    #title-serial{
-        left: 35%;
+    #title-model, #title-serial{
+        left: 33%;
     }
 
     #submit{
-        margin-left: 36%;
+        margin-left: 33%;
         margin-top: -20px;
         margin-bottom: 5px;
     }
+
+
 }
