--- a/public/detail style.css
+++ b/public/detail style.css
@@ -8,24 +8,27 @@
 }
 
 main{
-    display: grid;
     row-gap: 20px;
     place-items: center;
     font-size: 16px;
-    margin: 8% 0px 0px 0px;
+    margin: 8% 0px 0px 0px ;
 }
 
 .grid-container{
     display: grid;
+    height: 100%;
     grid-template-columns: 1fr 1fr 1fr;
     width: 100%;
     border-radius: 5px;
+    grid-template-rows: 45vh;
+    
 }
 
 
 .photo-card, .detail-card, .options{
     background-color: var(--primary);
     padding: 0px 10px;
+    
 }
 
 .detail-card{
@@ -50,6 +53,7 @@ main{
 .item-pic{
     width: 100%;
     height: 300px;
+    object-fit: fill;
 }
 
 #opt-icon i{
@@ -79,17 +83,7 @@ main{
     text-shadow: none;
 }
 
-.success-message{
-    position: absolute;
-    top: 75vh;
-    right: -50px;
-    display: none;
-    padding: 30px 35px;
-    background-color: var(--background);
-    border: 3px solid var(--accent); 
-    color: var(--text);
-    box-shadow: 0px 0px 4px var(--box-shadow);
-}
+
 
 /*Mobile*/
 @media screen and (max-width : 480px){
