--- a/public/style-table.css
+++ b/public/style-table.css
@@ -13,6 +13,7 @@ th, td {
     padding: 10px 5px;
     text-align: left;
     border-bottom: 1px solid #ddd;
+    transition: 1s ease-in-out;
   }
 
 #table-head{
@@ -26,4 +27,9 @@ th, td {
 }
 
 tr:nth-child(even) {background-color: #f2f2f2;}
+
+tr a{
+    text-decoration: none;
+    color: blue;
+}
 
