--- a/public/detail style.css
+++ b/public/detail style.css
@@ -83,6 +83,33 @@ main{
     text-shadow: none;
 }
 
+#confirmationDialog{
+    background-color: var(--background);
+    border: 3px solid var(--accent); 
+    border-radius: 6px;
+    color: var(--text);
+    box-shadow: 0px 0px 4px var(--box-shadow);
+}
+
+#confirmBtn, #cancelBtn{
+    font-size: 16px;
+    transition: 0.4s ease-in-out;
+    border-radius: 5px;
+}
+
+#confirmBtn{
+    background-color: var(--accent);
+    border: 2px solid var(--text);
+}
+
+#cancelBtn{
+    background-color: var(--primary);
+    border: 1px solid var(--text);
+}
+
+
+
+
 
 
 /*Mobile*/
