--- a/public/style-add.css
+++ b/public/style-add.css
@@ -66,7 +66,7 @@ section{
     border-radius: 3px;
 }
 
-#submit, .delete-button{
+#submit{
     font-size: 18px;
     padding: 12px 18px;
     border-radius: 100px;
@@ -82,6 +82,18 @@ section{
     border: 1px solid rgb(238, 112, 133);
     color: black;
 }
+
+#startScanButton{
+    font-size: 12px;
+    padding: 10px 14px;
+    border-radius: 80px;
+    color: white;
+    background-color: rgb(238, 112, 133);
+    border: 1px solid rgb(245, 209, 215);
+    display: none;
+}
+
+
 
 /*Mobile*/
 @media screen and (max-width : 480px){
@@ -100,13 +112,17 @@ section{
         border-color: rgb(238, 112, 133); 
     }
 
+    #serial{
+        width: 40%;
+    }
+
+    #startScanButton{
+        display: inline;
+    }
+
     .form-group select{
         margin-left: 12%;
         
-    }
-
-    #title-brand{
-        padding-left: 20px;
     }
 
     #title-model, #title-serial{
@@ -128,24 +144,24 @@ section{
         padding: 40px 20px 5px 20px;
     }
     .form-group label{
-        left: 31%;
+        left: 15%;
     }
 
     .form-group input{
         padding: 10px 3%;
-        margin-left: 31.5%;
+        margin-left: 15.5%;
+        width: 65%;
     }
 
     .form-group select{
-        margin-left: 38%;
+        margin-left: 15.5%;
     }
 
-    #title-brand{
-        padding-left: 20px;
-    }
+    
 
     #title-model, #title-serial{
-        left: 30.8%;
+        left: 15%;
+        
     }
     
     #submit{
@@ -158,11 +174,11 @@ section{
 /*Laptop*/
 @media screen and (min-width: 769px) and (max-width: 1023px){
     main{
-        margin: 20% 32px 0px 32px;
+        margin: 70px 32px 0px 32px;
         height: 80vh;
     }
     form{
-        height: 45vh;
+        height: 80%;
     }
     .form-group label{
         left: 15%;
@@ -192,7 +208,7 @@ section{
     }
 
     footer{
-        min-height: 8vh;
+        min-height: 45px;
         padding: 20px 10px 0px 10px;
     }
 }
@@ -217,16 +233,12 @@ section{
         margin-left: 11%;
     }
 
-    #title-brand{
-        padding-left: 15px;
-    }
-
     #title-model, #title-serial{
         left: 10%;
     }
 
     #submit{
-        margin-left: 33%;
+        margin-left: 34%;
         margin-top: -20px;
         margin-bottom: 5px;
     }
